# explncc

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: README.md  architecture.md  backends.md  caching-and-digest.md  chapter-10-notes.md  chapter-11-alignment.md  chapter-11-notes.md  chapter-12-ci.md  chapter-12-notes.md  chapter-13-notes.md  chapter-14-notes.md  classifier-labels.md  examples.md  extending-explncc.md  getting-started.md  local-mode.md  local-ranker.md  model-backends.md  offline-first.md  report-formats.md  toolchain-notes.md  why-and-fusion.md
examples/: README.md
packaging/: pyinstaller_entry.py
scripts/: README.md  build_all_examples.sh  build_example.sh  ci_github_step_summary.sh  run_explain.sh  run_stats.sh  run_summary.sh
tests/: test_alignment.py  test_alignment_bench.py  test_alignment_dataset.py  test_alignment_eval.py  test_alignment_pack.py  test_backends.py  test_bench_backends.py  test_chapter11_examples.py  test_chapter11_pipeline.py  test_chapter12_ci.py  test_chapter13.py  test_checks.py  test_ci_report.py  test_cli.py  test_config.py  test_context_snippets.py  test_dataset_llm.py  test_demangle.py  test_diff.py  test_evidence.py  test_explain_cache.py  test_explain_rules.py  test_export.py  test_fusion.py  test_import_order.py  test_local_classifier.py  test_local_cli.py  test_local_docs.py  test_local_features.py  test_local_offline.py  test_local_ranker.py  test_local_ranker_fixtures.py  test_local_training_export.py  test_normalizer.py  test_parser.py  test_per_finding.py  test_prompt_templates.py  test_report_cli.py  (+6 more)
(+140 files in other folders)
