[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explncc"
version = "0.1.0"
description = "Explain Compiler — parse and analyze Clang/LLVM optimization remark logs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "explncc contributors" }]
keywords = ["clang", "llvm", "compiler", "optimization", "performance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0.1",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.3",
]
ai = [
  "httpx>=0.27",
]

[project.scripts]
explncc = "explncc.cli:app"

[project.urls]
Homepage = "https://github.com/explncc/explncc"
Documentation = "https://github.com/explncc/explncc#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
mypy_path = "src"
packages = ["explncc"]
